updated css for focus and fixed spacing for text area

--- a/packages/@adobe/spectrum-css-temp/components/textfield/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/textfield/index.css
@@ -44,6 +44,12 @@ governing permissions and limitations under the License.
     min-height: var(--spectrum-textfield-height);
     overflow-x: hidden;
   }
+
+  &.spectrum-Textfield--readonly.spectrum-Textfield--multiline .spectrum-Textfield-input {
+    height: var(--spectrum-textfield-height);
+    min-height: var(--spectrum-textfield-height);
+    overflow-x: hidden;
+  }
 }
 
 .spectrum-Textfield-input {
@@ -183,8 +189,14 @@ governing permissions and limitations under the License.
   }
 
   .spectrum-Textfield--readonly & {
+
+    /* for quiet border */
     border-radius: var(--spectrum-textfield-quiet-border-radius);
-    border-width: 0 0 0 0;
+    border-width: 0 0 var(--spectrum-textfield-quiet-border-size) 0;
+    border-color: var(--spectrum-textfield-quiet-background-color);
+
+    /* for regular border */
+    /* border-style: none; */
 
     /* removes the side padding to align the text properly */
     padding-inline-start: var(--spectrum-textfield-quiet-padding-x);
